@@ -1,4 +1,9 @@
-$Id: ChangeLog,v 1.136 2005/11/04 19:28:10 manuelbi Exp $
+$Id: ChangeLog,v 1.137 2005/11/20 16:10:51 h_oudejans Exp $
+
+2005-12-08 Manuel Bilderbeek <manuel@msxnet.org>
+	* Add controls for separate scaler factor and scaler algorithm. WIP,
+	  because scaler factor is not an EnumSetting (yet?), this still needs
+	  work.
 
 2005-11-20 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed problems with ejecting media
